--- a/css/style.css
+++ b/css/style.css
@@ -320,34 +320,35 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  border-bottom: 1px solid #E0E0E0;
+  padding-bottom: 15px;
 }
 
 .featured__works-two {
-  margin-top: 45px;
+  margin-top: 31px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  border-bottom: 1px solid #E0E0E0;
+  padding-bottom: 15px;
 }
 
 .featured__works-three {
-  margin-top: 45px;
+  margin-top: 31px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  border-bottom: 1px solid #E0E0E0;
+  padding-bottom: 15px;
 }
 
 .featured__works-4 {
-  margin-top: 45px;
+  margin-top: 31px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-
-.featured__works-five {
-  margin-top: 45px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  border-bottom: 1px solid #E0E0E0;
+  padding-bottom: 15px;
 }
 
 .featued__img-one {
@@ -451,8 +452,39 @@ body {
   .featured__works-4 {
     display: none;
   }
+}
+.footer {
+  padding-top: 182px;
+}
 
-  .featured__works-five {
-    display: none;
-  }
+.footer__conteiner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.footer__logos {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.footer__logo:not(:last-child) {
+  margin-right: 36px;
+}
+
+.footer__copyright {
+  padding-top: 26px;
+  font-weight: 400;
+  font-size: 14px;
 }
